# RecStore

./: .gitignore  .gitmodules  CMakeLists.txt
dockerfiles/: init_dlrm.sh  init_env_inside_docker.sh  start_docker.sh
model_zoo/deeprec_dlrm/: train.py  train_recstore.py
model_zoo/tensorflow_dlrm/: recstore_embedding_layer.py  train.py
model_zoo/tensorflow_dlrm/data/: eval.csv  train.csv
model_zoo/torchrec_dlrm/: dlrm_main.py
model_zoo/torchrec_dlrm/tests/: test_cases.md  test_recstore_ebc.py  test_recstore_gpu.py
src/base/: tensor.h
src/base_ps/: base_client.h
src/framework/: CMakeLists.txt  op.cc  op.h
src/framework/pytorch/: CMakeLists.txt  op_torch.cc
src/framework/tensorflow/: CMakeLists.txt  op_tensorflow.cc
src/framework/tensorflow/python_client/: client.py
src/grpc_ps/: grpc_ps_client.cpp  grpc_ps_client.h  grpc_ps_client_test.cpp
src/python/pytorch/recstore/: KVClient.py
src/python/pytorch/torchrec/: EmbeddingBag.py
